# pui

./: CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  release.yml
docs/: demo.tape
src/: config.rs  exec.rs  main.rs  pueue_client.rs  tests.rs  ui.rs
src/snapshots/: pui__tests__log_view_stashed_task_shows_empty.snap  pui__tests__selection_follows_task_id_after_sort.snap  pui__tests__ui_snapshot.snap  pui__tests__ui_snapshot_filter_active.snap  pui__tests__ui_snapshot_help_mode.snap  pui__tests__ui_snapshot_help_mode_scrolled_bottom.snap  pui__tests__ui_snapshot_log_view.snap  pui__tests__ui_snapshot_log_view_end_key.snap  pui__tests__ui_snapshot_log_view_end_key_then_down.snap  pui__tests__ui_snapshot_multiselect.snap  pui__tests__ui_snapshot_remove_task.snap  pui__tests__ui_snapshot_with_details.snap  pui__tests__ui_snapshot_with_scrollbar.snap
tests/: custom_command_integration.rs
