[package]
name = "pui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.28.0", features = ["event-stream"] }
tokio = { version = "1.42.0", features = ["full"] }
anyhow = "1.0.94"
pueue-lib = "0.30.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tico = "1.0.0"
jiff = "0.1.14"
snap = "1.1.1"
ratatui-widgets = { version = "0.3.0", features = ["unstable-rendered-line-info"] }

[dev-dependencies]
chrono = "0.4.42"
insta = "1.46.0"

# compile in release mode
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
