[package]
name = "pui"
version = "0.1.1"
edition = "2024"
default-run = "pui"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1.52.1", features = ["full"] }
anyhow = "1.0.102"
pueue-lib = "0.31.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
toml = "1.1"
jiff = "0.2.24"
snap = "1.1.1"
ratatui-widgets = { version = "0.3.0", features = ["unstable-rendered-line-info"] }
futures = "0.3"
etcetera = "0.11.0"

[dev-dependencies]
chrono = "0.4.44"
insta = "1.47.2"
tempfile = "3"
libc = "0.2"

# compile in release mode
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
